--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://TechFlux1011.github.io/second-home-main/public",
   "name": "second-home",
   "version": "0.1.0",
   "private": true,
