--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "second-home",
-  "homepage": "https://techflux1011.github.io/second-home-main/",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
+  "homepage": "/second-home-main",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-sf-building-blocks": "^1.0.87",
+    "react-sf-themes": "^1.0.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
