--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-sf-building-blocks": "^1.0.87",
     "react-sf-themes": "^1.0.24",
+    "second-home": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
