--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-sf-building-blocks": "^1.0.87",
     "react-sf-themes": "^1.0.24",
     "second-home": "file:",
+    "ui-neumorphism": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
