Refactor project structure: remove old index.html and add new index.html in public directory; update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "second-home",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://TechFlux.github.io/second-home",
+  "homepage": "https://techflux1011.github.io/second-home-main/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
